5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1577_994.log
== TEST (2019-03-18 20:16:40) 
-- CODE:
print("")
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:17:01) 
-- CODE:
print("universidadedoamazonas")
-- OUTPUT:
universidadedoamazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:18:34) 
-- CODE:
print("Universidade
		Federal
		do
		Amazonas")
-- ERROR:
File "XXXX", line 1
    print("Universidade
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:18:55) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:20:25) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:22:15) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 20:23:42) 
-- CODE:
print(Universidade Federal do Amazonas);
-- EXECUTION TIME:
0.200746
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print(Universidade Federal do Amazonas);
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:26:22) 
-- CODE:
print"Universidade Federal do Amazonas"
-- ERROR:
File "XXXX", line 1
    print"Universidade Federal do Amazonas"
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:26:50) 
-- CODE:
>>>print"Universidade Federal do Amazonas"
-- ERROR:
File "XXXX", line 1
    >>>print"Universidade Federal do Amazonas"
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:30:01) 
-- CODE:
print["Universidade Federal do Amazonas"]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print["Universidade Federal do Amazonas"]
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:34:39) 
-- CODE:
print["Universidade Federal do Amazonas"]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print["Universidade Federal do Amazonas"]
TypeError: 'builtin_function_or_method' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:38:00) 
-- CODE:
<main.py>
print("Universidade Federal do Amazonas")
-- ERROR:
File "XXXX", line 1
    <main.py>
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:38:33) 
-- CODE:
main.py
print("Universidade Federal do Amazonas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    main.py
NameError: name 'main' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:38:53) 
-- CODE:
main.py
<>
print("Universidade Federal do Amazonas")
-- ERROR:
File "XXXX", line 2
    <>
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:39:11) 
-- CODE:
main.py
print("Universidade Federal do Amazonas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    main.py
NameError: name 'main' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:39:23) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:39:30) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:40:10) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:50:05) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:51:08) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:51:16) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:51:29) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 20:51:39) 
-- CODE:
"main.py"
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.147424
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
